пока юля не видит

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="./css/style.css">
 </head>
 
-<body>%
+<body>
 <header class="header">
     <div class="wrapper">
         <div class="header__wrapper">
@@ -53,7 +53,7 @@
                         маркетинг.</p>
                 </div>
                 <div class="benefits__card-item">
-                    <img src="./img/item1.png" class="benefits__card-title" alt="item">
+                    <img src="./img/item1.png" class="benefits__card-thumb" alt="item">
                 </div>
             </div>
 
