--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
             <h1 class="intro__title">Подбор авто в лизинг по выгодной цене</h1>
             <p class="intro__subtitle">IT платформа по быстрому поиску автомобиля от официальных дилеров РФ</p>
             <button class="intro__button button">Регистрация</button>
-            <img src="./img/main__img.png" class="intro__mainimg" alt="main__img">
+            <div class="intro__mainimg">
+                <img src="./img/main__img.png" alt="main__img">
+            </div>
         </div>
     </div>
 </section>
@@ -97,11 +99,25 @@
     </div>
 </section>
 
-<div>
-    <p>Регистрируйся и получай актуальные запросы на автомобили от заинтерисованных клиентов</p>
-    <button class="button">Регистрация</button>
-    <img src="" class="" alt="">
-</div>
+<section class="registration">
+    <div class="wrapper">
+        <div class="registration__wrapper">
+            <p class="registration__desk">Регистрируйся и получай актуальные запросы на автомобили от заинтерисованных
+                клиентов</p>
+            <button class="registration__button button">Регистрация</button>
+            <div class="registration__pic-cars">
+                <img src="./img/reg_cars.png" alt="cars">
+            </div>
+            <div class="registration__pic-map">
+                <img src="./img/reg_background.png" alt="map">
+            </div>
+        </div>
+    </div>
+</section>
+
 
 </body>
+
+//javascript
+
 </html>
