--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <title>Test Landing</title>
     <link rel="stylesheet" type="text/css" href="./fonts/SegoeUI/stylesheet.css">
     <link rel="stylesheet" type="text/css" href="./fonts/Whitney/stylesheet.css">
-    <link rel="stylesheet" type="text/css" href="./css/reset.css">
-    <link rel="stylesheet" type="text/css" href="./css/style.css">
+    <link rel="stylesheet" type="text/css" href="./css/style1.css">
 </head>
 
 <body>
