ну я справилась наконец то и сто лет не прошло

--- a/index.html
+++ b/index.html
@@ -13,18 +13,21 @@
     <div class="wrapper">
         <div class="header__wrapper">
             <div class="header__logo">
-                <a class="header__logo-link" href="#">
-                    <img src="./img/svg/test-logo.svg" alt="header__logo">
+                <a href="/" class="header__logo-link">
+                    <img src="./img/svg/test-logo.svg" alt="test logo" class="header__logo-pic">
                 </a>
             </div>
 
             <nav class="header__nav">
                 <ul class="header__list">
-                    <li class="header__item"><a href="#" class="header__link">Клиентам</a></li>
-                    <li class="header__item"><a href="#" class="header__link"><img src="./img/svg/header__icon.svg"
-                                                                                   alt="header__icon"
-                                                                                    class="header__icon">
-                        <span class="header__signup">Войти</span></a></li>
+                    <li class="header__item">
+                        <a href="#" class="header__link js-scroll">Клиентам</a>
+                    </li>
+                    <li class="header__item">
+                        <a href="#" class="header__link js-scroll">
+                            <img class="header__link-pic" src="./img/svg/header__icon.svg">
+                            <span>Войти</span></a>
+                    </li>
                 </ul>
                 <div class="header__nav-close">
                     <span class="header__nav-close-line"></span>
