--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="./fonts/SegoeUI/stylesheet.css">
     <link rel="stylesheet" type="text/css" href="./fonts/Whitney/stylesheet.css">
     <link rel="stylesheet" type="text/css" href="./css/style1.css">
+    <meta name="viewport" content="width=device-width">
 </head>
 
 <body>
@@ -50,7 +51,7 @@
             <p class="intro__subtitle">IT платформа по быстрому поиску автомобиля от официальных дилеров РФ</p>
             <button class="intro__button button">Регистрация</button>
             <div class="intro__mainimg">
-                <img src="./img/main__img.png" alt="main__img">
+                <img src="./img/main__img.png" alt="main__img" class="intro__mainimg-pic">
             </div>
         </div>
     </div>
