--- a/index.html
+++ b/index.html
@@ -1,138 +1,207 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Test Landing</title>
-    <link rel="stylesheet" type="text/css" href="./fonts/SegoeUI/stylesheet.css">
-    <link rel="stylesheet" type="text/css" href="./fonts/Whitney/stylesheet.css">
-    <link rel="stylesheet" type="text/css" href="./css/style1.css">
-    <meta name="viewport" content="width=device-width">
-</head>
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="./fonts/SegoeUI/stylesheet.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="./fonts/Whitney/stylesheet.css"
+    />
+    <link rel="stylesheet" type="text/css" href="./css/style1.css" />
+    <meta name="viewport" content="width=device-width" />
+  </head>
 
-<body>
-<header class="header">
-    <div class="wrapper">
+  <body>
+    <header class="header">
+      <div class="wrapper">
         <div class="header__wrapper">
-            <div class="header__logo">
-                <a href="/" class="header__logo-link">
-                    <img src="./img/svg/test-logo.svg" alt="test logo" class="header__logo-pic">
-                </a>
-            </div>
+          <div class="header__logo">
+            <a href="/" class="header__logo-link">
+              <img
+                src="./img/svg/test-logo.svg"
+                alt="test logo"
+                class="header__logo-pic"
+              />
+            </a>
+          </div>
 
-            <nav class="header__nav">
-                <ul class="header__list">
-                    <li class="header__item">
-                        <a href="#" class="header__link js-scroll">Клиентам</a>
-                    </li>
-                    <li class="header__item">
-                        <a href="#" class="header__link js-scroll">
-                            <img class="header__link-pic" src="./img/svg/header__icon.svg">
-                            <span>Войти</span></a>
-                    </li>
-                </ul>
-                <div class="header__nav-close">
-                    <span class="header__nav-close-line"></span>
-                    <span class="header__nav-close-line"></span>
-                </div>
-            </nav>
-            <div class="header__burger burger">
-                <span class="burger__line burger__line_first"></span>
-                <span class="burger__line burger__line_second"></span>
-                <span class="burger__line burger__line_third"></span>
+          <nav class="header__nav">
+            <ul class="header__list">
+              <li class="header__item">
+                <a href="#" class="header__link">Клиентам</a>
+              </li>
+              <li class="header__item header__signup">
+                <a href="#" class="header__link">
+                  <img
+                    class="header__link-pic"
+                    src="./img/svg/header__icon.svg"
+                  />
+                  <span>Войти</span></a>
+              </li>
+            </ul>
+            <div class="header__nav-close">
+              <span class="header__nav-close-line"></span>
+              <span class="header__nav-close-line"></span>
             </div>
+          </nav>
+          <div class="header__burger burger">
+            <span class="burger__line burger__line_first"></span>
+            <span class="burger__line burger__line_second"></span>
+            <span class="burger__line burger__line_third"></span>
+          </div>
         </div>
-    </div>
-</header>
+      </div>
+    </header>
 
-<section class="intro">
-    <div class="wrapper">
+    <section class="intro">
+      <div class="wrapper">
         <div class="intro__wrapper">
-            <h1 class="intro__title">Подбор авто в лизинг по выгодной цене</h1>
-            <p class="intro__subtitle">IT платформа по быстрому поиску автомобиля от официальных дилеров РФ</p>
-            <button class="intro__button button">Регистрация</button>
-            <div class="intro__mainimg">
-                <img src="./img/main__img.png" alt="main__img" class="intro__mainimg-pic">
-            </div>
+          <h1 class="intro__title">Подбор авто в лизинг по выгодной цене</h1>
+          <p class="intro__subtitle">
+            IT платформа по быстрому поиску автомобиля от официальных дилеров РФ
+          </p>
+          <button class="intro__button button">Регистрация</button>
+          <div class="intro__mainimg">
+            <img
+              src="./img/main__img.png"
+              alt="main__img"
+              class="intro__mainimg-pic"
+            />
+          </div>
         </div>
-    </div>
-</section>
+      </div>
+    </section>
 
-<section class="benefits">
-    <div class="wrapper">
+    <section class="benefits">
+      <div class="wrapper">
         <h2 class="benefits__title">Меньше условий – больше возможностей</h2>
         <div class="benefits__grid">
-            <div class="benefits__card">
-                <div class="benefits__card-item">
-                    <h3 class="benefits__card-title">Экономия времени</h3>
-                    <p class="benefits__card-desk">
-                        Дополнительный канал потенциальных клиентов, готовых приобрести автомобиль, без затрат на
-                        рекламу и
-                        маркетинг.</p>
-                </div>
-                <div class="benefits__card-item">
-                    <img src="./img/item1.png" class="benefits__card-thumb" alt="item">
-                </div>
+          <div class="benefits__card">
+            <div class="benefits__card-item">
+              <h3 class="benefits__card-title">Экономия времени</h3>
+              <p class="benefits__card-desk">
+                Дополнительный канал потенциальных клиентов, готовых приобрести
+                автомобиль, без затрат на рекламу и маркетинг.
+              </p>
             </div>
-
-            <div class="benefits__card">
-                <div class="benefits__card-item">
-                    <h3 class="benefits__card-title">Никаких задержек</h3>
-                    <p class="benefits__card-desk">
-                        Вы получаете запросы сразу же после отправки клиентом.
-                    </p>
-                </div>
-                <div class="benefits__card-item">
-                    <img src="./img/item2.png" class="benefits__card-thumb" alt="item">
-                </div>
+            <div class="benefits__card-item">
+              <img
+                src="./img/item1.png"
+                class="benefits__card-thumb"
+                alt="item"
+              />
             </div>
+          </div>
 
-            <div class="benefits__card">
-                <div class="benefits__card-item">
-                    <h3 class="benefits__card-title">Максимальная информативность</h3>
-                    <p class="benefits__card-desk">
-                        В каждой заявке указан регион поиска, марка и модель авто, а так же индивидуальные запросы
-                        клиента.</p>
-                </div>
-                <div class="benefits__card-item">
-                    <img src="./img/item3.png" class="benefits__card-thumb" alt="item">
-                </div>
+          <div class="benefits__card">
+            <div class="benefits__card-item">
+              <h3 class="benefits__card-title">Никаких задержек</h3>
+              <p class="benefits__card-desk">
+                Вы получаете запросы сразу же после отправки клиентом.
+              </p>
             </div>
-
-            <div class="benefits__card">
-                <div class="benefits__card-item">
-                    <h3 class="benefits__card-title">Удобство общения</h3>
-                    <p class="benefits__card-desk">
-                        Для каждого запроса у вас открыт чат
-                        с клиентом с возможностью отправки документов.</p>
-                </div>
-                <div class="benefits__card-item">
-                    <img src="./img/item4.png" class="benefits__card-thumb" alt="item">
-                </div>
-
+            <div class="benefits__card-item">
+              <img
+                src="./img/item2.png"
+                class="benefits__card-thumb"
+                alt="item"
+              />
             </div>
+          </div>
+
+          <div class="benefits__card">
+            <div class="benefits__card-item">
+              <h3 class="benefits__card-title">Максимальная информативность</h3>
+              <p class="benefits__card-desk">
+                В каждой заявке указан регион поиска, марка и модель авто, а так
+                же индивидуальные запросы клиента.
+              </p>
+            </div>
+            <div class="benefits__card-item">
+              <img
+                src="./img/item3.png"
+                class="benefits__card-thumb"
+                alt="item"
+              />
+            </div>
+          </div>
+
+          <div class="benefits__card">
+            <div class="benefits__card-item">
+              <h3 class="benefits__card-title">Удобство общения</h3>
+              <p class="benefits__card-desk">
+                Для каждого запроса у вас открыт чат с клиентом с возможностью
+                отправки документов.
+              </p>
+            </div>
+            <div class="benefits__card-item">
+              <img
+                src="./img/item4.png"
+                class="benefits__card-thumb"
+                alt="item"
+              />
+            </div>
+          </div>
         </div>
-    </div>
-</section>
+      </div>
+    </section>
 
-<section class="registration">
-    <div class="wrapper">
+    <section class="registration">
+      <div class="wrapper">
         <div class="registration__wrapper">
-            <p class="registration__desk">Регистрируйся и получай актуальные запросы на автомобили от заинтерисованных
-                клиентов</p>
-            <button class="registration__button button">Регистрация</button>
-            <div class="registration__pic-cars">
-                <img src="./img/reg_cars.png" alt="cars">
-            </div>
-            <div class="registration__pic-map">
-                <img src="./img/reg_background.png" alt="map">
-            </div>
+          <p class="registration__desk">
+            Регистрируйся и получай актуальные запросы на автомобили от
+            заинтерисованных клиентов
+          </p>
+          <button class="registration__button button">Регистрация</button>
+          <div class="registration__pic-cars">
+            <img src="./img/reg_cars.png" alt="cars" />
+          </div>
+          <div class="registration__pic-map">
+            <img src="./img/reg_background.png" alt="map" />
+          </div>
         </div>
-    </div>
-</section>
+      </div>
+    </section>
 
+    <section class="autorisation">
+        <div class="autorisation__wrapper">
+          <div class="autorisation__window">
+              <div class='autorisation__window-close'><img src='./img/window-close.svg' alt='window-close'></div>
+            <h2 class="autorisation__title">Авторизация</h2>
+            <form class="autorisation__form" action="/signup" method="post">
+              <p>
+                <label>E-mail</label><br />
+                <input
+                  type="email"
+                  name="email"
+                  placeholder="Введите e-mail"
+                  class='autorisation__form-email'
+                />
+              </p>
+              <p>
+                <label>Пароль</label><br />
+                <input
+                  type="password"
+                  name="password"
+                  placeholder="Введите пароль"
+                  class='autorisation__form-pass'
+                />
+              </p>
+              <p>
+                <input type="submit" name="submit" value="Войти" class='autorisation__form-submit' />
+              </p>
+            </form>
+          </div>
+        </div>
+      </section>
+  </body>
 
-</body>
-
-<script src="./js/main.js"></script>
-
+  <script src="./js/main.js"></script>
 </html>
